==================
Satchmo Change Log
==================

Trunk
-----
 * Added config files to make rpm creation easier
 * German translation
 * New capability to choose the translation language
 * COD payment module
 * Category code cleanup
 * Highlight active category in the menu
 * Install documentation cleanup
 * New feature to manage translations of all parts of Satchmo content
 * Ability to add images to categories & override category sort order
 * Improvements to CustomProduct to make it more broadly useable
 * Currency displayed using the chosen locale
 * Documented creation of custom payment modules
 * Creation of new templatetags (product_category_siblings and product_images)
 * Created new Shipping Module, 'Tiered', allowing multiple carriers and variable pricing by cart total.
 * Increased length of Contact phonenumber to work internationally
 * Added shipping countries directly to Shop - allowing the shops to specify legal countries for shipping.

Version 0.6, October 30, 2007
----------------
 * Removed dependency on Webda and added new l10n models
 * Added capability to rate and review products
 * Improved capabilities for users to manage their account information
 * Creation of a simple inventory management interface
 * Multiple bug fixes and code cleanups
 * New configuration option to allow user to set image upload directory name
 * Improved error handling for loading data
 * Allow manual product ordering in a category
 * Remove most custom settings from local_settings.py, instead using the satchmo.configuration app
 * Added a cache manager
 * Added TrustCommerce as a processing module
 * New downloadable product type
 * New custom product type
 * Added Swedish translation

Version 0.5, August 22, 2007
----------------------------
 * First official package launch