@@ -20,6 +20,7 @@ Trunk
  * Created new Shipping Module, 'Tiered', allowing multiple carriers and variable pricing by cart total.
  * Increased length of Contact phonenumber to work internationally
  * Added shipping countries directly to Shop - allowing the shops to specify legal countries for shipping.
+ * Updated google analytics to new code, with an optional fallback to the old urchin.js
 
 Version 0.6, October 30, 2007
 ----------------
